RESOLVED FIXED47762
ASI incorrectly inserts semicolon after break, continue, and return followed by a newline
https://bugs.webkit.org/show_bug.cgi?id=47762
Summary ASI incorrectly inserts semicolon after break, continue, and return followed ...
Oliver Hunt
Reported 2010-10-15 18:29:29 PDT
ASI incorrectly inserts semicolon after break, continue, and return followed by a newline
Attachments
Patch (5.67 KB, patch)
2010-10-15 18:35 PDT, Oliver Hunt
sam: review+
Oliver Hunt
Comment 1 2010-10-15 18:35:48 PDT
Sam Weinig
Comment 2 2010-10-15 18:42:36 PDT
Comment on attachment 70942 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=70942&action=review > JavaScriptCore/ChangeLog:5 > + ASI incorrectly inserts semicolon after break, continue, and return followed by a newline Please define ASI in the changelog.
Oliver Hunt
Comment 3 2010-10-15 18:50:44 PDT
Committed r69906
Note You need to log in before you can comment on or make changes to this bug.