third_party/WebKit/JavaScriptCore/parser/Lexer.cpp
@@ -1029,11 +1029,6 @@ inNumberAfterDecimalPoint:
         shiftLineTerminator();
         m_atLineStart = true;
         m_terminator = true;
-        if (lastTokenWasRestrKeyword()) {
-            token = SEMICOLON;
-            m_delimited = true;
-            goto returnToken;
-        }
         goto start;
     case CharacterInvalid:
         goto returnError;
