third_party/WebKit/LayoutTests/fast/js/script-tests/break-ASI.js
@@ -1,0 +1,9 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+description("Test to make sure we don't incorrectly insert a semi colon after a break statement");
+
+shouldBeTrue("do { if(0) break\n;else true; } while (0)")
+shouldBeTrue("do { if(0) continue\n;else true; } while (0)")
+shouldBeTrue("(function(){if (0) return\n;else return true;})()")
+shouldThrow("if (0) throw\n'Shouldn\'t have parsed this.';")
+
+var successfullyParsed = true;
